[package]
name = "packed_simd_experiments"
version = "0.1.0"
authors = ["Rodrigo Valle <rdan.valle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#packed_simd = "0.3.3"
packed_simd = { git = "https://github.com/rust-lang/packed_simd.git" }
